.provarCaches/00D5f000005vwGkEAI/objects/rstk__sylabeltemplate__c.object
<CustomObject>
    <description>sylabeltemplate__c</description>
    <fields>
        <fullName>rstk__available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available For Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__code__c</fullName>
        <label>Code</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__description__c</fullName>
        <label>Description</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__dpmm__c</fullName>
        <formula>VALUE( TRIM( LEFT( TEXT( rstk__printdens__c ) , 2 ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Print Density (dpmm)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__height__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Height</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__printdens__c</fullName>
        <label>Print Density</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6 dpmm (152dpi)</fullName>
                </value>
                <value>
                    <fullName>8 dpmm (203dpi)</fullName>
                </value>
                <value>
                    <fullName>12 dpmm (300dpi)</fullName>
                </value>
                <value>
                    <fullName>24 dpmm (600dpi)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__sizetype__c</fullName>
        <label>Size Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>inches</fullName>
                    <default>true</default>
                    <label>inches</label>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__type__c</fullName>
        <label>Template Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inventory Item</fullName>
                </value>
                <value>
                    <fullName>Inventory Location</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__width__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <label>Mobile Label Template</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__type__c</columns>
        <columns>rstk__description__c</columns>
        <columns>rstk__printdens__c</columns>
        <columns>rstk__language__c</columns>
        <columns>rstk__available__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Label Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Label Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>